@@ -17,6 +17,21 @@
    <caption>The main window showing the application in action</caption>
   </screenshot>
  </screenshots>
+ <keywords>
+  <keyword>Audio</keyword>
+  <keyword>MIDI</keyword>
+  <keyword>ALSA</keyword>
+  <keyword>JACK</keyword>
+  <keyword>LinuxSampler</keyword>
+  <keyword>GigaSampler</keyword>
+  <keyword>SoundFont</keyword>
+  <keyword>Synthesizer</keyword>
+  <keyword>Sampler</keyword>
+  <keyword>GIG</keyword>  
+  <keyword>SF2</keyword>  
+  <keyword>SFZ</keyword>  
+  <keyword>Qt</keyword>
+ </keywords>
  <url type="homepage">http://qsampler.sourceforge.net</url>
  <updatecontact>rncbc@rncbc.org</updatecontact>
  <project_group>linuxsampler.org</project_group>
